objects/LBI__LatticeWorkflowSetting__c.object
<CustomObject>
    <description>Holds settings for the Recommendation Workflow</description>
    <fields>
        <fullName>LBI__ContactOption__c</fullName>
        <label>Contact Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Last Updated Contact</fullName>
                </value>
                <value>
                    <fullName>Last Updated Contact with Phone</fullName>
                </value>
                <value>
                    <fullName>Last Active Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LBI__ConvertToOppActionName__c</fullName>
        <defaultValue>&quot;Convert to Opportunity&quot;</defaultValue>
        <description>Name that will be shown to users instead of &quot;Convert to Opportunity&quot;</description>
        <inlineHelpText>Name that will be shown to users instead of &quot;Convert to Opportunity&quot;</inlineHelpText>
        <label>Convert to Opp Action Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__DefaultUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default user that the recommendation/lead will be assigned to</description>
        <inlineHelpText>Default user that the recommendation/lead will be assigned to</inlineHelpText>
        <label>Default User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LatticeWorkflowSettings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__DisqualifyActionName__c</fullName>
        <defaultValue>&quot;Disqualify&quot;</defaultValue>
        <description>Name for the disqualify action on a recommendation</description>
        <inlineHelpText>Name for the disqualify action on a recommendation</inlineHelpText>
        <label>Disqualify Action Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ExpirationDays__c</fullName>
        <label>Expiration Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__Expiration__c</fullName>
        <description>Number of days that a recommendation with no activity will remain in the system</description>
        <inlineHelpText>Number of days that a recommendation with no activity will remain in the system</inlineHelpText>
        <label>Expiration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30 days</fullName>
                    <default>true</default>
                    <label>30 days</label>
                </value>
                <value>
                    <fullName>60 days</fullName>
                </value>
                <value>
                    <fullName>90 days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LBI__LatticeApplicationRegion__c</fullName>
        <label>Lattice Application/Region</label>
        <referenceTo>LBI__LatticeApplicationRegion__c</referenceTo>
        <relationshipLabel>Lattice Workflow Settings</relationshipLabel>
        <relationshipName>LatticeWorkflowSettings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LBI__Rule1__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Use Contact from Associated Account</description>
        <inlineHelpText>Use Contact from Associated Account</inlineHelpText>
        <label>Use Contact from Associated Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__Rule2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>RULE 2: Use Contact from Lattice</description>
        <inlineHelpText>RULE 2: Use Contact from Lattice</inlineHelpText>
        <label>Use Contact from Lattice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__Rule3__c</fullName>
        <defaultValue>true</defaultValue>
        <description>RULE 3: Error Recommendation on Import</description>
        <inlineHelpText>RULE 3: Error Recommendation on Import</inlineHelpText>
        <label>Error Recommendation on Import</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__ShowCallAction__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Call Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__ShowCardsOnAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Cards on Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__ShowEmailAction__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Email Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__ShowEventAction__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Event Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__ShowTaskAction__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Task Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recommendation</fullName>
                    <default>true</default>
                    <label>Recommendation</label>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LBI__UseContactAsPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Contact As Primary</label>
        <type>Checkbox</type>
    </fields>
    <label>Lattice Workflow Setting</label>
    <listViews>
        <fullName>LBI__All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>LBI__Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LWFS-{00000}</displayFormat>
        <label>Lattice Workflow Setting Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Workflow Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>